# cxgraph

./: .gitignore  Cargo.toml  README.md  index.html  style.css  syntax.md
cxgraph-desktop/: Cargo.toml
cxgraph-desktop/src/: main.rs
cxgraph-web/: Cargo.toml  editor.js  index.html  index.js  style.css
cxgraph-web/src/: lib.rs
cxgraph-web/static/: editor.js  index.js  style.css  themes.js
docs/: language.md  web.md
libcxgraph/: Cargo.toml
libcxgraph/src/: lib.rs
libcxgraph/src/language/: ast.rs  builtins.rs  compiler.rs  mod.rs  syntax.lalrpop  token.rs
libcxgraph/src/renderer/: fragment.wgsl  mod.rs  vertex.wgsl
src/: complex.rs  lib.rs  main.rs  wasm.rs
src/language/: compiler.rs  mod.rs  optimizer.rs  parser.rs  scanner.rs
src/renderer/: mod.rs  shader.wgsl
