[package]
name = "libcxgraph"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
webgl = ["wgpu/webgl"]

[dependencies]
log = "0.4"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
num-complex = "0.4"
wgpu = "0.16"
raw-window-handle = "0.5"

[build-dependencies]
lalrpop = "0.20.0"
