[package]
name = "libcxgraph"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[features]
webgl = ["wgpu/webgl"]

[dependencies]
log = "0.4"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
num-complex = "0.4"
wgpu = "22.1"
raw-window-handle = "0.6.2"
unicode-xid = "0.2"

[build-dependencies]
lalrpop = "0.21.0"
